--- a/04_CorrectnessCheck.Rmd
+++ b/04_CorrectnessCheck.Rmd
@@ -20,7 +20,7 @@ from tqdm import tqdm
 from time import time
 from copy import deepcopy
 import matplotlib as matplotlib
-from helper import get_figsize
+from MPS_QFT.helper import get_figsize
 
 # Numpy
 import numpy as np
@@ -37,15 +37,15 @@ from qiskit.quantum_info import random_statevector
 import quimb as quimb
 from ncon import ncon
 
-from MPS_QFT.helper import print_state, right_contract, left_contract
-from MPS_QFT.helper import to_full_MPS, to_dense, to_approx_MPS
+from MPS_QFT.helper import print_state, right_contract, left_contract, reverse_qiskit, qiskit_get_statevect
+from MPS_QFT.helper import to_full_MPS, to_dense, to_approx_MPS, Fidelity
 
 from MPS_QFT.manual import apply_two_qubit_gate_full, max_bond_dimension, apply_two_qubit_gate, apply_one_qubit_gate
 
 from MPS_QFT.gates import CPHASE, cphase_swap_qiskit, cphase_swap_quimb
 
 from MPS_QFT.circuit import qft_circuit_qiskit, qft_circuit_swap_full, qft_circuit_swap_approx, circ_data, MPS_circ
-from MPS_QFT.circuit import GHZ_qiskit, reverse_qiskit, qiskit_get_statevect
+from MPS_QFT.circuit import GHZ_qiskit
 ```
 
 ```{python}
@@ -281,58 +281,6 @@ ax[3].legend()
 fig.tight_layout()
 if LateX: plt.savefig("Plots/PerfVsChi.pgf")
 plt.show()
-```
-
-## Fidelity w.r.t. gates with fixed bond dimension $\chi$
-
-```{python}
-from gates import cphase_swap_qiskit
-# --- Parameters ---
-tx = TestingData(N=5, d=2)
-chi = 2
-qc = QuantumCircuit(tx.N)
-
-# --- Tracker ---
-fid = []
-
-# --- Random state creation ---
-random_state = random_statevector(tx.dim).data 
-qc_ran = Initialize(random_state).definition
-random_state4MPS = reverse_qiskit(random_state, tx.N) # Put the state in the correct order
-```
-
-```{python}
-MPS = quimb.tensor.tensor_1d.MatrixProductState.from_dense( np.matrix(random_state4MPS), 
-                                                                         dims=[d for _ in range(tx.N)], max_bond=chi)
-
-fid.append( Fidelity(MPS.to_dense()[:,0], qiskit_get_statevect(qc_ran)) )
-
-for n in tqdm(range(tx.N, 0, -1)):
-    if n == 0: pass
-    elif n==1: 
-        qc.h(0)
-        qc_ran.h(0)
-    else:
-        qc.h(0)
-        qc_ran.h(0)
-        for i in range(n-1):
-            cphase_swap_qiskit(qc, i, i+1, np.pi*1/2**(i+1))
-            cphase_swap_qiskit(qc_ran, i, i+1, np.pi*1/2**(i+1))
-        
-        MPS = quimb.tensor.tensor_1d.MatrixProductState.from_dense( np.matrix(random_state4MPS), 
-                                                                         dims=[d for _ in range(tx.N)], max_bond=chi)
-        MPS_1 = MPS_circ(qc, init_state=MPS)
-        MPS_dense = MPS_1.to_dense()[:,0]
-        res = qiskit_get_statevect(qc_ran)
-        fid.append( Fidelity(res, MPS_dense) )
-```
-
-```{python}
-plt.plot(fid)
-```
-
-```{python}
-fid
 ```
 
 ```{python}
